Change the tests to use mutable sets for the artifact versions.